[project]
name = "sem-6-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
    "twilio>=9.7.0",
    "uvicorn>=0.35.0",
]
